2009-11-19  Fumitoshi Ukai  <ukai@chromium.org>

        Reviewed by Eric Seidel.

        Ignore websocket tests when --no-http is specified.
        https://bugs.webkit.org/show_bug.cgi?id=31662

        * Scripts/run-webkit-tests:

2009-11-18  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Normalize ' and " in bugzilla-tool
        https://bugs.webkit.org/show_bug.cgi?id=31655

        We decided " is better than ' and we should be consistent.

        * Scripts/bugzilla-tool:

2009-11-18  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Remove support for Qt v4.3 or older versions
        https://bugs.webkit.org/show_bug.cgi?id=29469

        * DumpRenderTree/qt/DumpRenderTree.pro:
        * DumpRenderTree/qt/ImageDiff.pro:

2009-11-18  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by Eric Seidel.

        GitTest.test_create_binary_patch fails if /tmp is symlink
        https://bugs.webkit.org/show_bug.cgi?id=31536

        * Scripts/modules/scm_unittest.py:

2009-11-18  Yaar Schnitman  <yaar@chromium.org>

        Reviewed by Darin Adler.

        Configuration for Chromium Build Slaves.

        https://bugs.webkit.org/show_bug.cgi?id=31442

        * BuildSlaveSupport/build.webkit.org-config/config.json:
        * BuildSlaveSupport/build.webkit.org-config/master.cfg:

2009-11-18  Eric Seidel  <eric@webkit.org>

        Reviewed by Darin Adler.

        workqueue.py results in totally broken commit-queue UI
        https://bugs.webkit.org/show_bug.cgi?id=31645

        * Scripts/bugzilla-tool:
         - Remove unneeded use of PatchCollection.
         - Grab a new copy of the cq'd patches every run of the queue.

2009-11-18  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Make the Mac Geolocation API async.

        Update DRT to use the new async Mac Geolocation API.

        * DumpRenderTree/mac/UIDelegate.mm: